--- a/src/projects/index.liquid
+++ b/src/projects/index.liquid
@@ -12,8 +12,8 @@ dropdownCategory: projects
 <ul class="grid w-full gap-6 grid-cols-3 md:grid-cols-5 mb-4">
   {% for category in collections.projects %}
     <a href="{{ category.url }}"
-       class="inline-flex flex-col items-center justify-between w-full p-5 text-gray-700 dark:text-gray-300 bg-gray-50 border-2 border-gray-200 rounded-lg cursor-pointer dark:hover:text-gray-200 dark:border-gray-700 hover:text-gray-800 hover:bg-gray-100 dark:bg-gray-800 dark:hover:bg-gray-700">
-      <div class="w-full text-lg font-semibold">{{ category.data.title }}</div>
+       class="inline-flex flex-col items-center justify-between w-full p-5 text-gray-700 dark:text-gray-300 bg-gray-50/50 border-2 border-gray-200 rounded-lg cursor-pointer dark:hover:text-gray-200 dark:border-gray-700 hover:text-gray-800 hover:bg-gray-100 dark:bg-gray-800/50 dark:hover:bg-gray-700">
+      <div class="w-full text-lg font-semibold" style="overflow-wrap: break-word;">{{ category.data.title }}</div>
       <div class="w-full text-sm">{{ category.data.count }} projects</div>
     </a>
   {% endfor %}
