--- a/src/projects/skills.liquid
+++ b/src/projects/skills.liquid
@@ -14,10 +14,10 @@ title: "Skills"
   <hr class="h-px bg-gray-300 border-0 dark:bg-gray-600 grow w-full">
 </div>
 
-<ul class="grid w-full gap-6 grid-cols-3 md:grid-cols-5 mb-4">
+<ul class="grid w-full gap-6 grid-cols-1 sm:grid-cols-3 xl:grid-cols-5 mb-4">
   {% for lang in aggregatedLangs %}
     <a href="/projects/software?lang={{ lang.lang }}"
-      class="inline-flex items-center justify-between w-full p-5 text-gray-500 bg-white border-2 border-gray-200 rounded-lg cursor-pointer dark:hover:text-gray-300 dark:border-gray-700 hover:text-gray-600 hover:bg-gray-50 dark:text-gray-400 dark:bg-gray-800 dark:hover:bg-gray-700">
+      class="inline-flex items-center justify-between w-full p-5 text-gray-500 bg-white/50 border-2 border-gray-200 rounded-lg cursor-pointer dark:hover:text-gray-300 dark:border-gray-700 hover:text-gray-600 hover:bg-gray-50 dark:text-gray-400 dark:bg-gray-800/50 dark:hover:bg-gray-700">
       <div class="block">
         {% assign devicon = devicons[lang.lang] %}
         {% if devicon.style %}
@@ -41,10 +41,10 @@ title: "Skills"
     <h2 class="text-sm tracking-tight uppercase text-gray-700 dark:text-gray-300 shrink-0">{{ item[0] }}</h2>
     <hr class="h-px bg-gray-300 border-0 dark:bg-gray-600 grow w-full">
   </div>
-  <div class="grid w-full gap-6 grid-cols-3 md:grid-cols-5 mb-4">
+  <div class="grid w-full gap-6 grid-cols-1 sm:grid-cols-3 xl:grid-cols-5 mb-4">
     {% for skill in item[1] %}
       <div
-          class="inline-flex items-center justify-between w-full p-5 text-gray-500 bg-white border-2 border-gray-200 rounded-lg cursor-pointer dark:hover:text-gray-300 dark:border-gray-700 hover:text-gray-600 hover:bg-gray-50 dark:text-gray-400 dark:bg-gray-800 dark:hover:bg-gray-700">
+          class="inline-flex items-center justify-between w-full p-5 text-gray-500 bg-gray-50/50 border-2 border-gray-200 rounded-lg cursor-pointer dark:hover:text-gray-300 dark:border-gray-700 hover:text-gray-600 hover:bg-gray-50 dark:text-gray-400 dark:bg-gray-800/50 dark:hover:bg-gray-700">
         <div class="block">
           {% if skill.icon %}
             {% assign httpArray = skill.icon | split:"http" %}
