minor design fixes

--- a/src/projects/projects.liquid
+++ b/src/projects/projects.liquid
@@ -19,9 +19,8 @@ eleventyComputed:
   }
 
   #dropdown-filter-language {
-    anchor-default: --btn-filter-language;
-    top: anchor(bottom);
-    left: calc(anchor(center) - 7.5rem);
+    top: anchor(--btn-filter-language bottom);
+    left: calc(anchor(--btn-filter-language center) - 7.5rem);
   }
 
   /* Hide empty project containers */
