--- a/src/projects/skills.liquid
+++ b/src/projects/skills.liquid
@@ -14,9 +14,9 @@ title: "Skills"
   <hr class="h-px bg-gray-300 border-0 dark:bg-gray-600 grow w-full">
 </div>
 
-<ul class="grid w-full gap-6 grid-cols-1 sm:grid-cols-3 xl:grid-cols-5 mb-4">
+<ul class="grid w-full gap-6 grid-cols-1 sm:grid-cols-3 lg:grid-cols-6 xl:grid-cols-9 mb-4">
   {% for lang in aggregatedLangs %}
-    <a href="/projects/software?lang={{ lang.lang }}"
+    <a href="/projects/?l={{ lang.lang }}"
       class="inline-flex items-center justify-between w-full p-5 text-gray-500 bg-gray-50/50 border-2 border-gray-200 rounded-lg cursor-pointer dark:hover:text-gray-300 dark:border-gray-700 hover:text-gray-600 hover:bg-gray-50 dark:text-gray-400 dark:bg-gray-800/50 dark:hover:bg-gray-700">
       <div class="block">
         {% assign devicon = devicons[lang.lang] %}
@@ -41,7 +41,7 @@ title: "Skills"
     <h2 class="text-sm tracking-tight uppercase text-gray-700 dark:text-gray-300 shrink-0">{{ item[0] }}</h2>
     <hr class="h-px bg-gray-300 border-0 dark:bg-gray-600 grow w-full">
   </div>
-  <div class="grid w-full gap-6 grid-cols-1 sm:grid-cols-3 xl:grid-cols-5 mb-4">
+  <div class="grid w-full gap-6 grid-cols-1 sm:grid-cols-3 lg:grid-cols-6 xl:grid-cols-9 mb-4">
     {% for skill in item[1] %}
       <div
           class="inline-flex items-center justify-between w-full p-5 text-gray-500 bg-gray-50/50 border-2 border-gray-200 rounded-lg cursor-pointer dark:hover:text-gray-300 dark:border-gray-700 hover:text-gray-600 hover:bg-gray-50 dark:text-gray-400 dark:bg-gray-800/50 dark:hover:bg-gray-700">
@@ -62,7 +62,3 @@ title: "Skills"
   </div>
 {% endfor  %}
 
-<div class="max-w-screen-md flex my-2 items-center gap-3">
-  <h2 class="text-3xl font-medium text-gray-700 dark:text-gray-300 tracking-tight shrink-0">Other skills</h2>
-  <hr class="h-px bg-gray-300 border-0 dark:bg-gray-600 grow w-full">
-</div>
