--- a/src/main.css
+++ b/src/main.css
@@ -12,6 +12,10 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+.lightbox {
+  @apply cursor-pointer;
+}
+
 /* ===== NAVBAR ANIMATIONS ===== */
 @keyframes add-navbar-backdrop {
   to {
@@ -28,15 +32,15 @@
     @apply p-4 lg:px-8;
   }
   100% {
-    @apply max-w-screen-xl p-4 lg:px-8;
+    @apply max-w-screen-xl p-4 lg:px-8 flex;
   }
 }
 
 @supports (not (animation-timeline: scroll())) and (backdrop-filter: blur(8px))  {
-  nav.navbar {
+  nav.navbar, nav.home-navbar {
     @apply backdrop-blur bg-orange-100/60 dark:bg-primary-900/40 border-gray-900/10 dark:border-gray-50/[0.06];
   }
-  nav.navbar > div {
+  nav.navbar > div, nav.home-navbar > div {
     @apply p-4 lg:px-8 max-w-screen-xl;
   }
 }
@@ -83,3 +87,165 @@
   }
 }
 
+@supports (animation-timeline: scroll()) {
+  #home-header {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    height: 100vh;
+  }
+  #home-header > nav {
+    position: fixed;
+    transform: translateY(calc(50vh - 50%));
+    animation: morph-navbar linear both;
+    animation-timeline: scroll();
+    animation-range: 0 100vh;
+    width: 100%;
+    text-align: center;
+  }
+  @media (prefers-color-scheme: dark) {
+    #home-header > nav {
+      animation-name: morph-navbar-dark;
+    }
+  }
+  #home-header > nav > div {
+    display: inline-flex;
+    animation: add-navbar-padding linear both;
+    animation-timeline: scroll();
+    animation-range: 0 100vh;
+  }
+  #home-header > nav > div > a {
+    @apply text-8xl mb-6;
+    animation: morph-home-link linear both;
+    animation-timeline: scroll();
+    animation-range: 0 100vh;
+  }
+  @media (max-width: 640px) {
+    #home-header > nav > div > a {
+      @apply text-6xl;
+    }
+  }
+  #home-header #navbar-default {
+    width: 0;
+    min-width: 100%;
+    animation: morph-item-container linear both;
+    animation-timeline: scroll();
+    animation-range: 0 100vh;
+  }
+  #home-header ul {
+    justify-content: space-around;
+    animation: morph-item-list linear both;
+    animation-timeline: scroll();
+    animation-range: 0 100vh;
+  }
+  @media (min-width: 768px) {
+    #home-header ul a {
+      @apply text-xl text-gray-900 dark:text-gray-100 hover:text-primary-600 dark:hover:text-primary-400 border-b border-current rounded-none pb-1 hover:pb-0 transition-all;
+      animation: morph-items linear both;
+      animation-timeline: scroll();
+      animation-range: 0 100vh;
+    }
+  }
+
+  #home-i-am {
+    animation: appear backwards;
+    animation-range: 175vh 200vh;
+    animation-timeline: scroll();
+  }
+  #home-i-am-name {
+    overflow: clip;
+  }
+  #home-i-am-name > span:not(:last-child) {
+    @apply text-transparent bg-gradient-to-r from-orange-900 to-rose-900 dark:from-orange-200 dark:to-rose-200 bg-clip-text;
+    position: absolute;
+    top: 0;
+    left: 0;
+    animation: scroll-in-out both;
+    animation-timeline: scroll();
+    width: 100%;
+    display: inline-block;
+  }
+  #home-i-am-name > span:nth-child(1) {
+    animation-range: 175vh 275vh;
+  }
+  #home-i-am-name > span:nth-child(2) {
+    animation-range: 275vh 375vh;
+  }
+  #home-i-am-name > span:nth-child(3) {
+    animation-range: 375vh 475vh;
+  }
+  #home-i-am-name > span:nth-child(4) {
+    animation-range: 475vh 575vh;
+  }
+}
+/* ===== HOMEPAGE NAVBAR ANIMATIONS ===== */
+@keyframes morph-navbar {
+  75% {
+    background-color: transparent;
+  }
+  to {
+    @apply backdrop-blur bg-orange-100/60 border-gray-900/10 top-0 left-0;
+    width: calc(100% - 1.5rem);
+    transform: none;
+  }
+}
+@keyframes morph-navbar-dark {
+  75% {
+    background-color: transparent;
+  }
+  to {
+    @apply backdrop-blur bg-primary-900/40 border-gray-50/[0.06] top-0 left-0;
+    width: calc(100% - 1.5rem);
+    transform: none;
+  }
+}
+@keyframes morph-home-link {
+  to {
+    @apply text-2xl mb-0;
+  }
+}
+
+@keyframes morph-item-list {
+  to {
+    justify-content: start;
+  }
+}
+
+@keyframes morph-item-container {
+  to {
+    min-width: unset;
+    width: auto;
+  }
+}
+
+@keyframes morph-items {
+  50% {
+    border-color: transparent;
+  }
+  100% {
+    @apply border-b-0 pb-0 text-base;
+    border-color: transparent;
+  }
+}
+@keyframes appear {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes scroll-in-out {
+  0% {
+    transform: translateY(100%);
+  }
+  20% {
+    transform: translateY(-10%);
+  }
+  80% {
+    transform: translateY(-10%);
+  }
+  100% {
+    transform: translateY(-100%);
+  }
+}
